# monsieurm

./: .dockerignore  .env.template  .gitignore  Dockerfile  README.md  docker-entrypoint.sh  pyproject.toml
.github/workflows/: test-build-deploy.yml
src/fkllm/: cli.py  quiz.py
src/monsieurm/: cli.py  config.py  llm.py  prompts.py  quiz.py  slack.py
