[tool.poetry]
name = "monsieurm"
version = "0.1.0"
description = "Slack Bot solving femkjappe.no using an LLM"
authors = ["Vegard Egeland <vegardegeland@gmail.com>"]
license = "MIT License"
readme = "README.md"

[tool.poetry.scripts]
monsieurm = "monsieurm.cli:app"

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.11.7"
requests = "^2.32.4"
typer = "^0.16.0"
slack-sdk = "^3.36.0"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
isort = "^6.0.1"
mypy = "^1.17.0"

[[tool.poetry.packages]]
include = "monsieurm"
from = "src"

[tool.black]
line-length = 79

[tool.isort]
profile = "black"
src_paths = ["src"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
