[project]
name = "monsieurm"
version = "0.1.0"
description = "Slack Bot solving femkjappe.no using an LLM"
authors = [{ name = "Vegard Egeland", email = "vegardegeland@gmail.com" }]
license = "MIT"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.12.2",
    "requests>=2.32.5",
    "slack-sdk>=3.37.0",
    "typer>=0.19.2",
]

[project.scripts]
monsieurm = "monsieurm.cli:app"

[build-system]
requires = ["uv_build>=0.8.22,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ruff>=0.14.0",
    "ty>=0.0.1a22",
]

[tool.ruff]
fix = true
line-length = 79

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
